kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: invader3
  labels:
    role: app
spec:
  replicas: 1
  selector:
    matchLabels:
      role: app
  template:
    metadata:
      labels:
        role: app
    spec:
      containers:
        - name: app
          image: ""
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
