kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: invader3
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    role: app
