kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: invader3
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "X-Forwarded-For $http_x_forwarded_for";
spec:
  rules:
    - host: zacm.uk
      http:
        paths:
          - path: /invader3/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: invader3
                port:
                  number: 80
          - path: /invader3
            pathType: ImplementationSpecific
            backend:
              service:
                name: invader3
                port:
                  number: 80
